philly-311-citywide-meta/src/objects/Feedback_Effort__c.object
<CustomObject>
    <description>A way of tracking one or more efforts to associated with a specific item.  For instance, maybe it takes 2 hours to design something, 3 hours to implement, and 10 minutes to deploy.  The advantage of this is that the effort, already a detail to Feedback&apos;s master, can also be a detail record to another object outside of Feedback, like Milestones&apos; Project or Iteration, without threatening the loss of the Feedback ticket itself if the related object is deleted.</description>
    <fields>
        <fullName>Comment__c</fullName>
        <description>User-requested field to provide an explanation or rationale behind the estimate</description>
        <inlineHelpText>Optional rationale behind the estimate.</inlineHelpText>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>The duration of the effort.</description>
        <label>Duration</label>
        <precision>6</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feedback__c</fullName>
        <description>The feedback item this effort relates to.</description>
        <label>Feedback</label>
        <referenceTo>Feedback__c</referenceTo>
        <relationshipLabel>Feedback Effort</relationshipLabel>
        <relationshipName>Feedback_Effort</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Measure__c</fullName>
        <description>The unit of measure for the effort&apos;s duration.</description>
        <label>Measure</label>
        <picklist>
            <picklistValues>
                <fullName>Hours</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Points</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Feedback Effort</label>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feedback Effort</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>